--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ python_requires = >=3.12
 zip_safe = False
 install_requires =
     invenio-previewer>=1.3.6
-    invenio-rdm-records>=1.1.0
+    invenio-rdm-records>=17.0.0.dev2
     invenio-stats>=1.0.0
 
 [options.extras_require]
@@ -44,6 +44,12 @@ tests =
     invenio-db>=1.0.13
     invenio-i18n>=2.0.0
     invenio-search[opensearch2]>=2.0.0
+    invenio-communities>=18.0.0.dev2
+    invenio-jobs>=3.0.0.dev2
+    invenio-vocabularies>=7.0.0.dev2
+    invenio-requests>=6.0.0.dev2
+    invenio-users-resources>=7.0.0.dev2
+    pytest<8.0.0 # due to github actions couldn't resolve dependencies
     pytest-black-ng>=0.4.0
     pytest-invenio>=1.4.3
     pytest-mock>=1.6.0
