--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     invenio-previewer>=1.3.6
     invenio-rdm-records>=17.0.0.dev2
     invenio-stats>=1.0.0
+    marshmallow>=3.24.0
 
 [options.extras_require]
 tests =
